# callbacks_server

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  README.md  callbacks_controller.service  main.py  pyproject.toml
callbacks_server/: base.py  interface.py  server.py
callbacks_server/config/: __init__.py  gunicorn.py  logger.py  settings.py
callbacks_server/http_api/: base.py  default_responses.py  docs.py  middleware.py
callbacks_server/http_api/endpoints/: callbacks.py  technical.py
callbacks_server/models/: controller.py  request.py  response.py
callbacks_server/tools/: requests_manager.py
callbacks_server/utils/: controller_emulation.py  misc.py
env/: .env.default
